--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -12,7 +12,7 @@
     "title": "Mevcut Yapılarınızı",
     "titleHighlight": "Yeniden",
     "titleEnd": "Hayata Döndürüyoruz",
-    "description": "Tadilat, restorasyon ve renovasyon projelerinizde uzman çözüm ortağınız. Eski yapılarınızı modern, güvenli ve estetik yaşam alanlarına dönüştürüyoruz.",
+    "description": "Tadilat, restorasyon ve renovasyon projelerinizde uzman çözüm ortağınız. Eski yapılarınızı modern, güvenli ve estetik yaşam ve çalışma alanlarına dönüştürüyoruz.",
     "cta": "Ücretsiz Keşif",
     "ctaSecondary": "Projelerimizi İncele",
     "stats": {
